--- a/package.json
+++ b/package.json
@@ -6,15 +6,26 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "lodash": "^4.17.20",
+    "@wojtekmaj/react-daterange-picker": "^3.0.0",
+    "@wojtekmaj/react-datetimerange-picker": "^3.0.0",
+    "@wojtekmaj/react-timerange-picker": "^3.0.0",
     "namor": "^2.0.2",
     "react": "^17.0.1",
+    "react-calendar": "^3.3.0",
+    "react-clock": "^3.0.0",
+    "react-date-picker": "^8.0.6",
+    "react-datepicker": "^3.4.1",
+    "react-datetime-picker": "^3.0.4",
     "react-dom": "^17.0.1",
+    "react-elastic-carousel": "^0.11.0",
+    "react-file-base64": "^1.0.3",
     "react-icons": "^4.1.0",
-    "react-lodash": "^0.1.2",
+    "react-pdf": "^5.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-table": "^7.6.2",
+    "react-time-picker": "^4.1.2",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
